--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -14,6 +14,14 @@
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
       </div>
+      <div>
+        <h1>Edit</h1>
+        <form action="/urls/<%= shortURL %>" method="POST">
+          <span>New URL: </span>
+          <input type="text" name="new_url" value="">
+          <button type="submit" class="btn btn-success">Submit</button>
+        </form>
+      </div>
     <div class="card-footer text-muted"></div>
   </div>
   <!-- Bootstrap JS -->
