--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,7 +27,8 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
-            <td><a href="/urls/<%= url %>">Edit</a></td>
+            <td><a href="/urls/<%= url %>"><button type="submit" class="btn btn-info">Edit</button></a></td>
+            
             <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-danger">Delete</button></form></td>
           </tr>
         <% } %>
